🐛 fix image too large

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,7 +152,7 @@ p {
 
 .recipePicture {
     object-fit: cover;
-    width: 400px;
+    width: 100%;
     height: 300px;
 }
 
@@ -336,6 +336,10 @@ input[type=text] {
     #logo {
         width: 125px;
     }
+
+    input[type=text] {
+        width: 80%;
+      }
      
 }
 
